# Jynco

./: .env.developer.example  .env.example  .env.production.example  .env.self-hosted.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_KEYS_GUIDE.md  AUTOMATION_GUIDE.md  CLAUDE.md  COMFYUI_QUICK_START.md  COMFYUI_SETUP_GUIDE.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  DEMO_RESULTS.md  DOCKER_TESTING_GUIDE.md  ERROR_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_GUIDE.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v1.0.0.md  SANDBOXING_SETUP_GUIDE.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_BEST_PRACTICES.md  SECURITY_DEPLOYMENT_GUIDE.md  START_HERE.md  TEST_RESULTS.md  USER_GUIDE.md  VIDEO_FOUNDRY_README.md  VISUAL_WALKTHROUGH.md  WINDOWS_SETUP.md  WORKFLOW_ARCHITECTURE.md  WORKFLOW_LIBRARY_GUIDE.md  configure_keys.sh  dev.ps1  (+24 more)
.claude/hooks/: session-start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-compose-test.yml
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/api/: __init__.py  health.py  projects.py  render.py  segments.py  workflows.py
backend/config/: __init__.py  database.py  settings.py
backend/migrations/: 001_add_error_code_to_segments.sql  002_row_level_security.sql  README.md
backend/models/: __init__.py  base.py  project.py  render_job.py  segment.py  user.py  workflow.py
backend/schemas/: __init__.py  project.py  render_job.py  segment.py  workflow.py
backend/services/: __init__.py  auth.py  local_storage_client.py  orchestrator.py  rabbitmq_client.py  redis_client.py  s3_client.py  secrets.py  storage_factory.py  workflow_vetting.py
chromaframe/: .gitignore  CMakeLists.txt  README.md
chromaframe/src/: main.cpp
comfyui/: Dockerfile
config/: development.json  docker-daemon-gvisor.json  production.json  seccomp-worker.json  squid.conf  workflow_allowlist.yaml
docs/: ARCHITECTURE.md  ARCHVIZ_ANIMATION_STRATEGY.md  BLOG_POST_ANNOUNCEMENT.md  CHROMAFRAME_ARCHITECTURE.md  CHROMAFRAME_INTEGRATION_STRATEGY.md  COMFYUI_INTEGRATION.md  DEMO_RECORDING_GUIDE.md  GETTING_STARTED.md  SECURITY_BEST_PRACTICES.md  SECURITY_IMPLEMENTATION_ROADMAP.md  SECURITY_PROPOSAL_V3.md  SELF_HOSTED_AI_GUIDE.md  SETUP.md  SOCIAL_SHARE_CARD.md  TROUBLESHOOTING.md  UNIFIED_ARCHITECTURE.md  USER_GUIDE.md
docs/security/: README.md
examples/: README.md  __init__.py  parallel_initialization_demo.py  simple_workflow.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
local-ai-agent/: .env.example  .gitignore  FRONTEND_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  USAGE_EXAMPLES.md  main.py  requirements.txt  security.py  setup.py  start-backend.sh  start-frontend.sh  verify-installation.sh
local-ai-agent/frontend/: package-lock.json  package.json
local-ai-agent/tools/: __init__.py  docker_tools.py  fs_tools.py  git_tools.py
scripts/: auto-fix.ps1  auto-fix.sh  code-check.ps1  code-check.sh  dev-check.ps1  dev-check.sh  quick-test.ps1  quick-test.sh
src/: __init__.py
src/agents/: __init__.py  architect_agent.py  base_agent.py  motion_agent.py  quartermaster_agent.py  render_agent.py  storyboard_agent.py
src/core/: __init__.py  config_loader.py
src/infrastructure/: __init__.py  cache.py  job_queue.py
src/schemas/: __init__.py  storyboard_schema_v1_2.json  storyboard_types.py
sub-agents/: ChiefTechnologyOfficer.md  DirectorOfEngineering.md  Sub-Agent Technical Lead.md  Sub-Agent Vice President.md  TechnicalLead.md  VicePresidentOfEngineering.md  sub-agent Product Manager.md
sub-agents/asset-foundry-agents/: Architect.md  Artificer.md  (+4 more)
tests/: README.md  __init__.py  conftest.py  test_agents.py
workflows/: README.md  image-to-video-basic.json  text-to-video-basic.json
(+45 files in other folders)
